terminando de migrar html a componente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,28 +2,9 @@
 <main class="container">
  <app-presentacion></app-presentacion>
   <section id="cv">
-      <article class="card">
-          <div class="card-title">
-              <h5>Acerca de</h5>
-          </div>
-          <div class="card-body"></div>
-          <!--info profecional resumida-->
-      </article>
-      <article class="card">
-          <div class="card-title">
-              <h5>Experiencia</h5>
-          </div>
-          <div class="card-body"></div>
-          <!--Datos de los lugares donde he trabajado, experiencia, puesto, logos-->
-      </article>
-      <article>
-          <div class="card-title">
-              <h5>Educación</h5>
-          </div>
-          <div class="card-body">
-              <!--INformacion académica-->
-          </div>
-      </article>
+    <app-acercade></app-acercade>
+    <app-experiencia></app-experiencia> 
+    <app-educacion></app-educacion>  
   </section>
 </main>
 
