--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -1,1 +1,8 @@
-<p>educacion works!</p>
+<article>
+    <div class="card-title">
+        <h5>Educación</h5>
+    </div>
+    <div class="card-body">
+        <!--INformacion académica-->
+    </div>
+</article>
