--- a/src/app/experiencia/experiencia.component.html
+++ b/src/app/experiencia/experiencia.component.html
@@ -1,1 +1,7 @@
-<p>experiencia works!</p>
+<article class="card">
+    <div class="card-title">
+        <h5>Experiencia</h5>
+    </div>
+    <div class="card-body"></div>
+    <!--Datos de los lugares donde he trabajado, experiencia, puesto, logos-->
+</article>
