--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -1,1 +1,7 @@
-<p>acercade works!</p>
+<article class="card">
+    <div class="card-title">
+        <h5>Acerca de</h5>
+    </div>
+    <div class="card-body"></div>
+    <!--info profecional resumida-->
+</article>
