agregando contenido acercade
close #4

--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -2,6 +2,10 @@
     <div class="card-title">
         <h5>Acerca de</h5>
     </div>
-    <div class="card-body"></div>
+    <div class="card-body">
+        <p class="text-negrita">Actualmente trabajando en Ministerio de Educacion Provincial. Experiencia en trabajos de psicolologia organizacional. Marketing inmobiliario.</p>
+        <p><span class="text-negrita">Intereses:</span> metodologías ágiles de desarrollo, relevamiento y análisis funcional</p>
+        <p><span class="text-negrita">Perfil:</span> scrum master, proyect mananger </p> 
+    </div>
     <!--info profecional resumida-->
 </article>
