agrego contenido de experiencia
close #2

--- a/src/app/experiencia/experiencia.component.html
+++ b/src/app/experiencia/experiencia.component.html
@@ -2,6 +2,18 @@
     <div class="card-title">
         <h5>Experiencia</h5>
     </div>
-    <div class="card-body"></div>
+    <div class="card-body">
+        <p><img src="../../assets/cultura.png" width="60"> Diagnóstico organizacional de la Empresa Provincial de Cultura de La Habana,2011</p>
+        <p><img src="../../assets/aa.png" width="60"> de orientación sobre adicciones. En Centro de Alcohólicos Anónimos en La Habana, Cuba. 2013</p>
+        <p>Psicoterapia a pacientes de internación domiciliaria. Empresa: MGI. La Plata, Argentina. 2013</p>
+        <p><img src="../../assets/Minterior.jpg" width="60" style="border-radius: 100%;"> Ministerio del Interior. Buenos Aires, Argentina. 2014</p>
+        <p><img src="../../assets/sernameng.jpeg" width="60" style="border-radius: 100%;">2021- 2022. Investigadora y autora de contenidos, en el proyecto:
+            "Licitación ID: 628-1-LE21 Elaboración, diseño e impresión de manual de relatoría
+            de trabajo con mujeres Programa Mujer y Participación Política". Asesoría realizada
+            por la empresa Epigrama Editora para el Servicio Nacional de la Mujer y la Equidad
+            de Género de Chile.
+         </p>
+         <p><img src="../../assets/gba-edu.jpeg" width="60" style="border-radius: 100%;">Ministerio de Educación Provincial. Dirección de Inspección General. 2022</p>       
+    </div>
     <!--Datos de los lugares donde he trabajado, experiencia, puesto, logos-->
 </article>
