agregue informacion a componente educacion
close #3

--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -1,8 +1,44 @@
-<article>
+<article class="card">
     <div class="card-title">
         <h5>Educación</h5>
     </div>
     <div class="card-body">
-        <!--INformacion académica-->
+        <p>
+            <span class="text-negrita">Universitarios:</span>
+            De grado: Licenciada en Psicología, otorgado por la Facultad de Psicología, 
+            Universidad de La Habana (UH). 2013.
+        </p>
+        <p>
+            <span class="text-negrita">Maestría:</span>
+             Maestría Género, política y sociedad, por la Fundación Latinoamericana de Ciencias Sociales (FLACSO). En Programa Regional de formación en Género y Políticas Públicas. Acreditada por la CONEAU ( Comisión Nacional
+             de Evaluación y Acreditación Universitaria del Ministerio de Educación, Argentina) Resolusión 2017-323
+        </p>
+        <ul>
+            <li>Seminario: Género, TransGénero, y PostGénero en las Políticas del Cuerpo y
+                las Disidencias en las Américas Latinas. Coordina: Pedro Di Pietro. FLACSO,
+                Argentina.
+            </li>
+            <li>Seminario: Infancias y Género: Género, Transgénero, y Postgénero en las
+                Políticas de Cuerpo y las Disidencas en las Américas Latinas. Coordinadora:
+                Valeria Llobet. FLACSO, Argentina.
+            </li>
+            <li>Seminario: Planificación para la igualdad entre los géneros: Enfoque
+                estratétigico y perspectiva de género. Coordinadora: María del Carmen
+                Tamargo. FLACSO, Argentina
+            </li>
+            <li>Seminario: Análisis comparado de legislación, políticas públicas e instituciones orientadas hacia el logro de la equidad de género. Coordinadora:
+               Virginia Guzmán. FLACSO, Argentina.
+            </li>
+            <li>Seminario: Programación estratégica, análisis prospectivo y tecnologías para el cambio organizacional. La gestión y la evaluación de políticas de equidad
+                de género. Coordinadora: María del Carmen Tamargo. FLACSO, Argentina
+            </li>
+            <li>Seminario: Globalización y género: dimensiones económicas, políticas, culturales y sociales. tensiones, reacciones y propuestas emergentes en
+                américa latina. Coordinadora: Gloria Bonder. FLACSO, Argentina.
+            </li>
+        </ul>
+        <p>Taller:
+            La Escritura de Papers. Nociones, Herramientas y Claves para su Participación en Publicaciones Académicas. Coordinación Autoctonía. Revista de Ciencias Sociales e Historia. Dirección de Investigación y Doctorados.
+            Universidad Bernardo O'Higgins. Santiago de Chile.
+        </p>
     </div>
 </article>
