--- a/src/app/acercade/acercade.component.css
+++ b/src/app/acercade/acercade.component.css
@@ -6,6 +6,7 @@
     background-color: #51f0cb;
     width: 29%;
     border-radius: 0 0 20px;
+    text-align: center;
 }
 .card{
     border-color: #51f0cb;
