--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <app-acercade></app-acercade>
     <app-experiencia></app-experiencia> 
     <app-educacion></app-educacion>  
+    <app-hard></app-hard>
   </section>
 </main>
 
