--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -3,9 +3,9 @@
         <h5>Acerca de</h5>
     </div>
     <div class="card-body">
-        <p class="text-negrita">Actualmente trabajando en Ministerio de Educacion Provincial. Experiencia en trabajos de psicolologia organizacional. Marketing inmobiliario.</p>
-        <p><span class="text-negrita">Intereses:</span> metodologías ágiles de desarrollo, relevamiento y análisis funcional</p>
-        <p><span class="text-negrita">Perfil:</span> scrum master, proyect mananger </p> 
+        <p class="text-negrita">{{data.descripcion}}</p>
+        <p><span class="text-negrita">Intereses: </span> {{data.interes}}</p>
+        <p><span class="text-negrita">Perfil:</span>{{data.perfil}}</p> 
     </div>
     <!--info profecional resumida-->
 </article>
