--- a/src/app/experiencia/experiencia.component.css
+++ b/src/app/experiencia/experiencia.component.css
@@ -12,3 +12,13 @@
     border-width: 3px;
     margin-bottom: 12px;
 }
+img{
+    border-radius: 100%;
+    margin-right: 5px;
+    float: left;
+    min-width: 60px;
+}
+.item{
+    clear: both;
+    padding-top: 7px;
+}
