--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <div href="#" class="navbar-brand logo"></div>
+      <a href="/">
+        <div class="navbar-brand logo"></div>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="true" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,7 +31,7 @@
               </a>
             </li>
           </ul>
-          <a href="#" type="button" class="btn btn-success">Login</a>
+          <a href="/login" type="button" class="btn btn-success">Login</a>
       </div>
     </div>
   </nav>
