agregando footer y proyectos, cambios en style de otros componentes, se agrega servicio de mysql con docker

--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -12,4 +12,7 @@
                 </ul>
         </div>
     </div>
+    <div class="card">
+        <button type="button" class="btn btn-primary btn-xs">Editar</button>
+    </div>  
 </article>
