--- a/src/app/hard/hard.component.html
+++ b/src/app/hard/hard.component.html
@@ -23,4 +23,7 @@
           <div class="skills php" style="width: 60%; background-color: #4e629d;" >60%</div>
         </div>
     </div>
+    <div class="card">
+      <button type="button" class="btn btn-primary btn-xs">Editar</button>
+  </div>  
 </article>
