--- a/src/app/experiencia/experiencia.component.css
+++ b/src/app/experiencia/experiencia.component.css
@@ -22,3 +22,16 @@ img{
     clear: both;
     padding-top: 7px;
 }
+
+button{
+    float: left;
+    background-color: #d97834;
+    border-color: #d97834;
+    margin: 2px;
+    border-radius: 100%;
+    padding-bottom: 10px;
+}
+
+button.action{
+    float: right;
+}
