--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -5,5 +5,7 @@
       <app-experiencia></app-experiencia> 
       <app-educacion></app-educacion>  
       <app-hard></app-hard>
+      <app-proyecto></app-proyecto>
+      <app-footer></app-footer>
     </section>
 </div>
